@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::CaptchaPNG
 
 {{$NEXT}}
+        - Improve urand function as per CPANSec recommendation
 
 1.06      2025-06-11 07:07:50-07:00 America/Los_Angeles
         - Use Crypt::URandom to provide urand as rand replacement
